fix(ui):  auto overflow on sidebar (#686)
close #635

--- a/client/src/css/templates/sidebar.scss
+++ b/client/src/css/templates/sidebar.scss
@@ -10,6 +10,7 @@
     z-index: 2;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 
     .sidebar-header {
         padding: 5px 10px;
